ingress-files/ingress-metrics-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-ingress-microk8s-metrics
  namespace: ingress
  labels:
    app: nginx-ingress-microk8s # We will use this in the ServiceMonitor
spec:
  type: ClusterIP
  selector:
    # This must match the labels on your MicroK8s pods
    name: nginx-ingress-microk8s 
  ports:
  - name: metrics
    port: 10254
    targetPort: 10254
