ingress-files/host-based-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: cheddar
spec:
 rules:
 - host: cheddar.fotoboek-harder.nl
   http:
     paths:
     - path: /
       pathType: Prefix
       backend:
         service:
           name: cheddar
           port:
             number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: stilton
spec:
 rules:
 - host: stilton.fotoboek-harder.nl
   http:
     paths:
     - path: /
       pathType: Prefix
       backend:
         service:
           name: stilton
           port:
             number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: wensleydale
spec:
 rules:
 - host: wensleydale.fotoboek-harder.nl
   http:
     paths:
     - path: /
       pathType: Prefix
       backend:
         service:
           name: wensleydale
           port:
             number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: intro
spec:
 rules:
 - host: intro.fotoboek-harder.nl
   http:
     paths:
     - path: /
       pathType: Prefix
       backend:
         service:
           name: nginx-service
           port:
             number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: foto
spec:
 rules:
 - host: fotos.fotoboek-harder.nl
   http:
    paths:
    - path: /
      pathType: Prefix
      backend:
        service:
          name: foto-main-service
          port:
            number: 8080
