ingress-files/path-based-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: intro
spec:
 rules:
 - host: example.nl ## this should lead to 192.168.2.110 in /etc/hosts file
   http:
     paths:
     - path: /intro
       pathType: Prefix
       backend:
         service:
           name: nginx-service
           port:
             number: 80
